examples/test/testpolicy4135.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4135
  namespace: namespace205
spec:
  podSelector:
    matchLabels:
      key18: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value8
          key44: value27
      podSelector:
        matchLabels:
          key32: value17
          key40: value33
